gateway/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
    name: gateway
spec:
    replicas: 2
    template:
        metadata:
            labels:
                app: nginx
        spec:
            containers:
                - name: gateway
                  image: nginx:1.13.3-alpine
                  ports:
                      - containerPort: 80
                  volumeMounts:
                      - name: gateway
                        mountPath: /etc/nginx/conf.d/default.conf
                        subPath: default.conf
            volumes:
                - name: gateway
                  configMap:
                      name: gateway
