gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: gateway
    labels:
        app: nginx
spec:
    type: LoadBalancer
    ports:
        - port: 80
          targetPort: 80
          protocol: TCP
