gateway/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/auth-url: https://$host/oauth2/introspect
    ingress.kubernetes.io/auth-response-headers: User-Id, User-Scopes
  name: external-auth-oauth2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: demo
          servicePort: 8080
        path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: auth
          servicePort: 8080
        path: /oauth2
